# jitcode

./: .editorconfig  .gitignore  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml
docs/: Makefile  conf.py  index.rst  requirements.txt
examples/: SW_of_Roesslers.py  benchmark.py  double_fhn_example.py  double_fhn_lyapunov.py  double_fhn_restricted_lyap.py  double_fhn_transversal_lyap.py  kuramoto_network.py  lotka_volterra.py
jitcode/: __init__.py  _helpers.py  _jitcode.py  _jitcode_old.py  dummy_integrator.py  integrator_tools.py  jitced_template.c  sympy_symbols.py
tests/: all_tests.sh  scenarios.py  test_generation.py  test_helpers.py  test_integrator_tools.py  test_jitcode.py  test_order.py  test_restricted_lyap.py  test_sympy_input.py  test_transversal_lyap.py
